# pydango

./: .pylintrc  LICENSE  README.md  pyproject.toml
pydango/: __init__.py  connection.py  errors.py  interfaces.py  model.py  pyobjectid.py
src/pydango/: __init__.py  connection.py  errors.py  interfaces.py  model.py
