[tool.poetry]
name = "pydango"
version = "0.1.3.1"
description = ""
authors = ["Vitaliy Grusha <vit.grusha@gmail.com>"]
readme = "README.md"
packages = [{include = "pydango"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
ujson = "^5.7.0"
motor = "^3.1.1"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
